--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Movie App</string>
     <string name="favorites">Favorites</string>
     <string name="rating">Rating</string>
+    <string name="language">ru</string>
+    <string name="poster">Poster</string>
+    <string name="rating_star">Rating star</string>
 </resources>
