--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,23 +22,18 @@
     <string name="save">Save</string>
     <string name="my_favorite_films">My favorite films:</string>
     <string name="map">Map</string>
-
-    <string name="dialog_button_close">Закрыть</string>
-    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
-    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
-    <string name="dialog_title_gps_turned_off">GPS отключён</string>
-    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
-    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
-    <string name="dialog_rationale_title">Доступ к геолокации</string>
-    <string name="dialog_rationale_meaasge">Объяснение</string>
-    <string name="dialog_rationale_give_access">Предоставить доступ</string>
-    <string name="dialog_rationale_decline">Не надо</string>
-    <string name="dialog_address_title">Ваш адрес</string>
-    <string name="dialog_address_get_weather">Узнать погоду</string>
-    <string name="set_my_location">Определить местоположение</string>
-    <string name="switch_list_of_cities">Переключить список городов</string>
+    <string name="dialog_button_close">Cancel</string>
     <string name="google_maps">Google Maps</string>
     <string name="default_address">Red Square, 1, Moscow</string>
     <string name="button_search_map">Search</string>
-    <string name="marker_start">Start</string>
+    <string name="add_cinema">Add Cinema</string>
+    <string name="error_dialog_message">You don\'t enter cinema name</string>
+    <string name="choice_of_cinemas">Choice of cinemas</string>
+    <string name="choice_of_cinemas_dialog_message">
+        Choose the cinemas convenient for you on the map.
+        The application will notify you when you are near</string>
+    <string name="select_cinemas">Select cinemas</string>
+    <string name="add_marker_dialog_message">Enter name of the cinema</string>
+    <string name="remove_cinema">Remove Cinema</string>
+
 </resources>
